--- a/header.html
+++ b/header.html
@@ -3,13 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <link rel="stylesheet" href="/Nginxy/css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="/.nginxy/css/style.css" type="text/css"/>
 
     <title>File Server</title>
 
 	<!-- jQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="/Nginxy/js/config.js"></script>
+	<script src="/.nginxy/js/config.js"></script>
 </head>
 <body>
     <h1>
